# mcblend

./: .gitignore  .gitmodules  .pylintrc  .readthedocs.yaml  LICENSE  Mcblend.code-workspace  README.md  __init__.py  animation-optimization-visualization.ipynb  build.py  classes.dot  mkdocs.yml  mypy.ini  operator.py  operator_func.py  operator_funcs.py  operators.py  packages.dot  panel.py  panels.py  pydocmd.yml  tox.ini
.github/workflows/: blank.yml  tests.yml
blender_scripts/: README.md  batch_export.py  export_animation.py  export_model.py  import_export.py  import_export_uv_group.py  install.py  uv_map_and_export_model.py
docs/: animating_effects.md  attachables_and_1st_person_animations.md  conf.py  importing_and_exporting.md  index.md  installation.md  installation_and_updating.md  limitations.md  requirements.txt  texture_customization.md  tips_and_tricks.md  uv_groups.md
docs/advanced_tutorials/: attachables_and_1st_person_animations.md  tips_and_tricks.md
docs/animating_effects/: index.md
docs/animations/: animating_sound_and_particle_effects.md  creating_animations_from_scratch.md  essential_concepts.md  exporting_animations.md  extra_keyframes.md  optimizing_animations.md  physics_simulation.md
docs/attachables_and_1st_person_animations/: index.md
docs/basic_operators/: index.md
docs/code_documentation/: index.md
docs/code_documentation/operator/: index.md
docs/code_documentation/operator_func/: index.md
docs/code_documentation/operator_func/animation/: index.md
docs/code_documentation/operator_func/common/: index.md
docs/code_documentation/operator_func/importer/: index.md
docs/code_documentation/operator_func/json_tools/: index.md
docs/code_documentation/operator_func/model/: index.md
docs/code_documentation/operator_func/uv/: index.md
docs/code_documentation/panel/: index.md
docs/conversion_rules/: index.md
docs/gui/: 3d_viewport_sidebar.md  index.md  menu_items.md  object_properties.md  overview.md  scene_properties.md  uv_group_masks.md
docs/gui/3d_viewport_sidebar/: index.md
docs/gui/menu_items/: index.md
docs/gui/object_properties/: index.md
docs/gui/scene_properties/: index.md
docs/gui_changes/: index.md
docs/importing_and_exporting/: index.md
docs/installation/: index.md
docs/limitations/: index.md
docs/modeling/: attachable_item_models.md  creating_models_from_scratch.md  cubes_vs_polymeshes.md  exporting_models.md  fixing_invalid_cubes.md  importing_models_from_files.md  importing_models_from_rp.md  inflate_property.md  merging_models.md
docs/texture_customization/: index.md
docs/texturing_and_uv_mapping/: automatic_uv_mapping.md  customizing_textures_using_uv_groups.md  fixing_invalid_uv_mapping.md  materials_and_render_controllers.md  uv_groups.md
docs/tips_and_tricks/: enabling_subframes.md  index.md  matching_framerate.md  mcblend_blender_template.md  using_mcblend_to_decorate_the_levels_in_the_game.md  world_unit_scale.md
docs/user_manual/: basics.md  conversion_rules.md  custom_properties.md  export_animation.md  export_model.md  parenting.md  set_uvs.md
docs/user_manual/basics/: index.md
docs/user_manual/conversion_rules/: index.md
docs/user_manual/custom_properties/: index.md
docs/user_manual/export_animation/: index.md
docs/user_manual/export_model/: index.md
docs/user_manual/glossary/: index.md
docs/user_manual/panels/: index.md
docs/user_manual/set_uvs/: index.md
docs/user_manual/tips/: index.md
docs/uv_groups/: index.md
fake_bpy_modules/: .gitignore  LICENSE  README.md  pyproject.toml
fake_bpy_modules/bpy/types/: __init__.pyi
fake_bpy_modules/bpy_extras/anim_utils/: __init__.pyi
fake_bpy_modules/mathutils/: __init__.pyi
mcblend/: __init__.py  animation_data.py  common_data.py  common_data.pyi  custom_properties.py  exporter_data.py  extra_types.py  object_data.py  object_data.pyi  operator.py  panel.py  resource_pack_data.py  resource_pack_data.pyi  uv_data.py  uv_data.pyi
mcblend/bedrock_packs/: __init__.py  json.py
mcblend/operator_func/: __init__.py  animation.py  animation_optimization.py  common.py  db_handler.py  exception.py  extra_types.py  frame_range.py  importer.py  json_tools.py  jsonc_decoder.py  material.py  model.py  molang.py  pyi_types.py  rp_importer.py  texture_generator.py  typed_bpy_access.py  typed_bpy_access.pyi  uv.py
mcblend/operator_func/bedrock_packs/: __init__.py  json.py
mock_modules/: README.md
mock_modules/bpy/: setup.cfg
mock_modules/bpy/src/bpy/: __init__.py  props.py  types.py
mock_modules/bpy_extras/: setup.cfg
mock_modules/bpy_extras/src/bpy_extras/: __init__.py  io_utils.py  object_utils.py
mock_modules/bpy_types/: setup.cfg
mock_modules/bpy_types/src/bpy_types/: __init__.py
mock_modules/mathutils/: setup.cfg
mock_modules/mathutils/src/mathutils/: __init__.py
operator_func/: __init__.py  animation.py  common.py  model.py  uv.py
src/: __init__.py  operator.py  panel.py
src/operator_func/: __init__.py  animation.py  common.py  importer.py  json_tools.py  model.py  uv.py
tests/: common.py  test_animation_export.py  test_batch_animation_export.py  test_config.py  test_import_export_with_bones.py  test_import_export_with_empties.py  test_importer.py  test_model_export.py  test_uv_group.py  test_uv_mapper.py
tests/data/: test_batch_export.blend  tests_project.blend  tests_project.blend11
tests/data/test_animation_export/: ArmatureAnimation.animation.json  ArmatureAnimation_ArmatureOrigin.animation.json  BattleMech.animation.json  ObjectAnimation.animation.json  animation_interpolation.animation.json  animation_optimization.animation.json  armature_transformation_test.animation.json  extra_frames.animation.json  issue130.animation.json  issue71.animation.json
tests/data/test_batch_export/: base.animation.json  result.animation.json
tests/data/test_importer/models/: battle_mech.geo.json  binding_test.geo.json  (+15 more)
tests/data/test_model_export/: ArmatureAnimation_ArmatureOrigin.geo.json  issue116.geo.json  issue62.geo.json
tests/data/test_uv_mapper/: flatten_cubes.geo.json  issue89.geo.json
(+1 files in other folders)
