[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "fake-bpy-modules-mcblend"
version = "1.0.0"
description = "Fake bpy modules modified for the Mcblend project."

[tool.setuptools]
packages = [
    "addon_utils",
    "animsys_refactor",
    "aud",
    "bgl",
    "bl_app_override",
    "bl_app_override.helpers",
    "bl_app_template_utils",
    "bl_console_utils",
    "bl_console_utils.autocomplete",
    "bl_console_utils.autocomplete.complete_calltip",
    "bl_console_utils.autocomplete.complete_import",
    "bl_console_utils.autocomplete.complete_namespace",
    "bl_console_utils.autocomplete.intellisense",
    "bl_i18n_utils",
    "bl_i18n_utils.bl_extract_messages",
    "bl_i18n_utils.merge_po",
    "bl_i18n_utils.settings",
    "bl_i18n_utils.utils",
    "bl_i18n_utils.utils_cli",
    "bl_i18n_utils.utils_languages_menu",
    "bl_i18n_utils.utils_rtl",
    "bl_keymap_utils",
    "bl_keymap_utils.io",
    "bl_keymap_utils.keymap_from_toolbar",
    "bl_keymap_utils.keymap_hierarchy",
    "bl_keymap_utils.platform_helpers",
    "bl_keymap_utils.versioning",
    "bl_math",
    "bl_operators",
    "bl_operators.add_mesh_torus",
    "bl_operators.anim",
    "bl_operators.assets",
    "bl_operators.bmesh",
    "bl_operators.bmesh.find_adjacent",
    "bl_operators.clip",
    "bl_operators.console",
    "bl_operators.constraint",
    "bl_operators.file",
    "bl_operators.freestyle",
    "bl_operators.geometry_nodes",
    "bl_operators.image",
    "bl_operators.mesh",
    "bl_operators.node",
    "bl_operators.object",
    "bl_operators.object_align",
    "bl_operators.object_quick_effects",
    "bl_operators.object_randomize_transform",
    "bl_operators.presets",
    "bl_operators.rigidbody",
    "bl_operators.screen_play_rendered_anim",
    "bl_operators.sequencer",
    "bl_operators.spreadsheet",
    "bl_operators.userpref",
    "bl_operators.uvcalc_follow_active",
    "bl_operators.uvcalc_lightmap",
    "bl_operators.uvcalc_transform",
    "bl_operators.vertexpaint_dirt",
    "bl_operators.view3d",
    "bl_operators.wm",
    "bl_previews_utils",
    "bl_previews_utils.bl_previews_render",
    "bl_rna_utils",
    "bl_rna_utils.data_path",
    "bl_text_utils",
    "bl_text_utils.external_editor",
    "bl_ui",
    "bl_ui.anim",
    "bl_ui.asset_shelf",
    "bl_ui.generic_ui_list",
    "bl_ui.node_add_menu",
    "bl_ui.node_add_menu_compositor",
    "bl_ui.node_add_menu_geometry",
    "bl_ui.node_add_menu_shader",
    "bl_ui.node_add_menu_texture",
    "bl_ui.properties_animviz",
    "bl_ui.properties_collection",
    "bl_ui.properties_constraint",
    "bl_ui.properties_data_armature",
    "bl_ui.properties_data_bone",
    "bl_ui.properties_data_camera",
    "bl_ui.properties_data_curve",
    "bl_ui.properties_data_curves",
    "bl_ui.properties_data_empty",
    "bl_ui.properties_data_gpencil",
    "bl_ui.properties_data_grease_pencil",
    "bl_ui.properties_data_lattice",
    "bl_ui.properties_data_light",
    "bl_ui.properties_data_lightprobe",
    "bl_ui.properties_data_mesh",
    "bl_ui.properties_data_metaball",
    "bl_ui.properties_data_modifier",
    "bl_ui.properties_data_pointcloud",
    "bl_ui.properties_data_shaderfx",
    "bl_ui.properties_data_speaker",
    "bl_ui.properties_data_volume",
    "bl_ui.properties_freestyle",
    "bl_ui.properties_grease_pencil_common",
    "bl_ui.properties_mask_common",
    "bl_ui.properties_material",
    "bl_ui.properties_material_gpencil",
    "bl_ui.properties_object",
    "bl_ui.properties_output",
    "bl_ui.properties_paint_common",
    "bl_ui.properties_particle",
    "bl_ui.properties_physics_cloth",
    "bl_ui.properties_physics_common",
    "bl_ui.properties_physics_dynamicpaint",
    "bl_ui.properties_physics_field",
    "bl_ui.properties_physics_fluid",
    "bl_ui.properties_physics_geometry_nodes",
    "bl_ui.properties_physics_rigidbody",
    "bl_ui.properties_physics_rigidbody_constraint",
    "bl_ui.properties_physics_softbody",
    "bl_ui.properties_render",
    "bl_ui.properties_scene",
    "bl_ui.properties_texture",
    "bl_ui.properties_view_layer",
    "bl_ui.properties_workspace",
    "bl_ui.properties_world",
    "bl_ui.space_clip",
    "bl_ui.space_console",
    "bl_ui.space_dopesheet",
    "bl_ui.space_filebrowser",
    "bl_ui.space_graph",
    "bl_ui.space_image",
    "bl_ui.space_info",
    "bl_ui.space_nla",
    "bl_ui.space_node",
    "bl_ui.space_outliner",
    "bl_ui.space_properties",
    "bl_ui.space_sequencer",
    "bl_ui.space_spreadsheet",
    "bl_ui.space_statusbar",
    "bl_ui.space_text",
    "bl_ui.space_time",
    "bl_ui.space_toolsystem_common",
    "bl_ui.space_toolsystem_toolbar",
    "bl_ui.space_topbar",
    "bl_ui.space_userpref",
    "bl_ui.space_view3d",
    "bl_ui.space_view3d_toolbar",
    "bl_ui.utils",
    "bl_ui_utils",
    "bl_ui_utils.bug_report_url",
    "bl_ui_utils.layout",
    "blend_render_info",
    "blf",
    "bmesh",
    "bmesh.geometry",
    "bmesh.ops",
    "bmesh.types",
    "bmesh.utils",
    "bpy",
    "bpy.app",
    "bpy.app.handlers",
    "bpy.app.icons",
    "bpy.app.timers",
    "bpy.app.translations",
    "bpy.msgbus",
    "bpy.ops",
    "bpy.ops.action",
    "bpy.ops.anim",
    "bpy.ops.armature",
    "bpy.ops.asset",
    "bpy.ops.boid",
    "bpy.ops.brush",
    "bpy.ops.buttons",
    "bpy.ops.cachefile",
    "bpy.ops.camera",
    "bpy.ops.clip",
    "bpy.ops.cloth",
    "bpy.ops.collection",
    "bpy.ops.console",
    "bpy.ops.constraint",
    "bpy.ops.curve",
    "bpy.ops.curves",
    "bpy.ops.cycles",
    "bpy.ops.dpaint",
    "bpy.ops.ed",
    "bpy.ops.export_anim",
    "bpy.ops.export_mesh",
    "bpy.ops.export_scene",
    "bpy.ops.file",
    "bpy.ops.fluid",
    "bpy.ops.font",
    "bpy.ops.geometry",
    "bpy.ops.gizmogroup",
    "bpy.ops.gpencil",
    "bpy.ops.graph",
    "bpy.ops.grease_pencil",
    "bpy.ops.image",
    "bpy.ops.import_anim",
    "bpy.ops.import_curve",
    "bpy.ops.import_mesh",
    "bpy.ops.import_scene",
    "bpy.ops.info",
    "bpy.ops.lattice",
    "bpy.ops.marker",
    "bpy.ops.mask",
    "bpy.ops.material",
    "bpy.ops.mball",
    "bpy.ops.mesh",
    "bpy.ops.nla",
    "bpy.ops.node",
    "bpy.ops.object",
    "bpy.ops.outliner",
    "bpy.ops.paint",
    "bpy.ops.paintcurve",
    "bpy.ops.palette",
    "bpy.ops.particle",
    "bpy.ops.pose",
    "bpy.ops.poselib",
    "bpy.ops.preferences",
    "bpy.ops.ptcache",
    "bpy.ops.render",
    "bpy.ops.rigidbody",
    "bpy.ops.scene",
    "bpy.ops.screen",
    "bpy.ops.script",
    "bpy.ops.sculpt",
    "bpy.ops.sculpt_curves",
    "bpy.ops.sequencer",
    "bpy.ops.sound",
    "bpy.ops.spreadsheet",
    "bpy.ops.surface",
    "bpy.ops.text",
    "bpy.ops.text_editor",
    "bpy.ops.texture",
    "bpy.ops.transform",
    "bpy.ops.ui",
    "bpy.ops.uilist",
    "bpy.ops.uv",
    "bpy.ops.view2d",
    "bpy.ops.view3d",
    "bpy.ops.wm",
    "bpy.ops.workspace",
    "bpy.ops.world",
    "bpy.path",
    "bpy.props",
    "bpy.types",
    "bpy.utils",
    "bpy.utils.previews",
    "bpy.utils.units",
    "bpy_extras",
    "bpy_extras.anim_utils",
    "bpy_extras.asset_utils",
    "bpy_extras.bmesh_utils",
    "bpy_extras.extensions",
    "bpy_extras.extensions.junction_module",
    "bpy_extras.id_map_utils",
    "bpy_extras.image_utils",
    "bpy_extras.io_utils",
    "bpy_extras.keyconfig_utils",
    "bpy_extras.mesh_utils",
    "bpy_extras.node_shader_utils",
    "bpy_extras.node_utils",
    "bpy_extras.object_utils",
    "bpy_extras.view3d_utils",
    "bpy_extras.wm_utils",
    "bpy_extras.wm_utils.progress_report",
    "bpy_restrict_state",
    "bpy_types",
    "console_python",
    "console_shell",
    "freestyle",
    "freestyle.chainingiterators",
    "freestyle.functions",
    "freestyle.predicates",
    "freestyle.shaders",
    "freestyle.types",
    "freestyle.utils",
    "freestyle.utils.ContextFunctions",
    "gpu",
    "gpu.capabilities",
    "gpu.matrix",
    "gpu.platform",
    "gpu.select",
    "gpu.shader",
    "gpu.state",
    "gpu.texture",
    "gpu.types",
    "gpu_extras",
    "gpu_extras.batch",
    "gpu_extras.presets",
    "graphviz_export",
    "idprop",
    "idprop.types",
    "imbuf",
    "imbuf.types",
    "keyingsets_builtins",
    "keyingsets_utils",
    "mathutils",
    "mathutils.bvhtree",
    "mathutils.geometry",
    "mathutils.interpolate",
    "mathutils.kdtree",
    "mathutils.noise",
    "nodeitems_builtins",
    "nodeitems_utils",
    "rna_info",
    "rna_keymap_ui",
    "rna_prop_ui",
    "rna_xml",
    "sys_info"
]

[options.packages.find]
where = "."
